--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,16 @@
     transform: rotate(360deg);
   }
 }
+
+
+.cardContainer{
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.card{
+  background-color: yellow;
+}
