--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -6,9 +6,10 @@
     position: relative;
     width: 150px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    text-align: left;
-    top:100px;
-    float: left;
+    text-align: center;
+    
+
+    
   }
 
   .card > .img-container {
